releng: Bug 552713: Support building of Trace Compass with Java 11
[Added] Bug 552713: Support building of Trace Compass with Java 11

Change-Id: I194ecd649a97e2b18899416955ddf939fdf6b584
Signed-off-by: Bernd Hufmann <Bernd.Hufmann@ericsson.com>
Reviewed-on: https://git.eclipse.org/r/152091
Tested-by: CI Bot
Reviewed-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>