@@ -37,9 +37,9 @@ public class DataProviderParameterTest {
 
     private static final String CUSTOM_KEY = "MyKey";
     private static Map<String, Object> fParameters = new HashMap<>();
-    private List<?> fLongList = Arrays.asList(new Long(1), new Long(2), new Long(3));
-    private List<?> fIntList = Arrays.asList(new Integer(1), new Integer(2), new Integer(3));
-    private List<?> fMixedList = Arrays.asList(new Integer(1), new Long(2), new Integer(3));
+    private List<?> fLongList = Arrays.asList(Long.valueOf(1), Long.valueOf(2), Long.valueOf(3));
+    private List<?> fIntList = Arrays.asList(Integer.valueOf(1), Integer.valueOf(2), Integer.valueOf(3));
+    private List<?> fMixedList = Arrays.asList(Integer.valueOf(1), Long.valueOf(2), Integer.valueOf(3));
     private String fWrongParameter = "Unsupported";
 
     /**
@@ -119,12 +119,12 @@ public class DataProviderParameterTest {
      */
     @Test
     public void testExtractBoolean() {
-        fParameters.put(CUSTOM_KEY, new Boolean(true));
+        fParameters.put(CUSTOM_KEY, Boolean.TRUE);
         Boolean extractedBoolean = DataProviderParameterUtils.extractBoolean(fParameters, CUSTOM_KEY);
         assertNotNull(extractedBoolean);
         assertTrue(extractedBoolean);
 
-        fParameters.put(CUSTOM_KEY, new Boolean(false));
+        fParameters.put(CUSTOM_KEY, Boolean.FALSE);
         extractedBoolean = DataProviderParameterUtils.extractBoolean(fParameters, CUSTOM_KEY);
         assertNotNull(extractedBoolean);
         assertFalse(extractedBoolean);
